<resources>
    <string name="app_name">FavoriteThings</string>
    <string name="red">red</string>
    <string name="blue">blue</string>
    <string name="white">white</string>
    <string name="update_from_firebase">Update from Firebase</string>
    <string name="color">Color</string>
    <string name="number">Number</string>
    <string name="text_color">Color</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
</resources>
