<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.rosehulman.favoritethings.MainActivity">

    <Button
        android:id="@+id/update_color_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/update_from_firebase" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#888">

        <TextView
            android:id="@+id/color_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/text_color" />

        <Button
            android:id="@+id/white_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/color_text_view"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:text="@string/white" />

        <Button
            android:id="@+id/red_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/white_button"
            android:layout_toLeftOf="@+id/white_button"
            android:text="@string/red" />

        <Button
            android:id="@+id/blue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/white_button"
            android:layout_centerHorizontal="true"
            android:layout_toRightOf="@+id/white_button"
            android:text="@string/blue" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#aaa">

        <TextView
            android:id="@+id/number_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/number" />

        <Button
            android:id="@+id/increment_number_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/number_text_view"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:text="@string/up" />

        <Button
            android:id="@+id/decrement_number_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/number_text_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/down" />

    </RelativeLayout>


</LinearLayout>
